--- a/Angular2MVC/app/Components/user.component.html
+++ b/Angular2MVC/app/Components/user.component.html
@@ -4,12 +4,20 @@
     </div>
     <div class='panel-body'>
         <div class='table-responsive'>
-            <div style="padding-bottom:10px"><button class="btn btn-primary" (click)="addUser()">Add</button></div>
+            <div>
+                <search-list [title]='searchTitle' (change)="criteriaChange($event)"></search-list>
+            </div>
+
+            <div style="padding-bottom:10px"><button class="btn btn-primary" (click)="addUser()">Add</button> </div>
+            <div style="padding-bottom:10px"><button class="btn btn-primary" (click)="purchaseItems()">Purchase</button>></div>
             <div class="alert alert-info" role="alert" *ngIf="indLoading"><img src="../../images/loading.gif" width="32" height="32" /> Loading...</div>
             <div *ngIf='users && users.length==0' class="alert alert-info" role="alert">No record found!</div>
             <table class='table table-striped' *ngIf='users && users.length'>
                 <thead>
                     <tr>
+                        <th>
+                            
+                        </th>
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Gender</th>
@@ -17,7 +25,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let user of users">
+                    <tr *ngFor="let user of users | userFilter:listFilter">
+                        <td> <input #checkbox (change)="checkboxChanged(checkbox.value)" value="{{user.Id}}" type="checkbox" /></td>
                         <td>{{user.FirstName}}</td>
                         <td>{{user.LastName}}</td>
                         <td>{{user.Gender}}</td>
@@ -28,6 +37,7 @@
                     </tr>
                 </tbody>
             </table>
+
             <div>
             </div>
         </div>
